--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.27",
     "nodemon": "^2.0.4",
     "pg": "^8.3.0",
@@ -15,8 +16,10 @@
   "dependencies": {
     "apollo-server-express": "^2.16.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.10",
     "type-graphql": "^1.0.0-rc.3",
     "typeorm": "0.2.25"
