--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,11 @@
   "dependencies": {
     "@apollo/client": "^3.1.3",
     "@apollo/react-hooks": "^4.0.0",
-    "@graphql-codegen/cli": "^1.17.8",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
+    "@testing-library/jest-dom": "^5.11.3",
+    "@testing-library/react": "^10.4.8",
+    "@testing-library/user-event": "^12.1.1",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "apollo-boost": "^0.4.9",
@@ -18,7 +17,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "typescript": "~3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,10 +42,10 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.17.8",
     "@graphql-codegen/typescript": "1.17.8",
-    "@types/graphql": "^14.5.0",
     "@graphql-codegen/typescript-operations": "1.17.8",
-    "@graphql-codegen/typescript-react-apollo": "1.17.8",
-    "@graphql-codegen/cli": "1.17.8"
+    "@graphql-codegen/typescript-react-apollo": "^2.0.6",
+    "@types/graphql": "^14.5.0"
   }
 }
