--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "apollo-boost": "^0.4.9",
+    "apollo-link-token-refresh": "^0.3.2",
     "graphql": "^15.3.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -48,6 +50,7 @@
     "@graphql-codegen/typescript-operations": "1.17.8",
     "@graphql-codegen/typescript-react-apollo": "^2.0.6",
     "@types/graphql": "^14.5.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react-router-dom": "^5.1.5"
   }
 }
